--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,44 +1,68 @@
+def registry = 'https://taxi012.jfrog.io'
+
 pipeline {
     agent {
         node {
             label 'maven'
         }
     }
-environment {
-    PATH = "/opt/apache-maven-3.9.6/bin:$PATH"
-    (SONAR_TOKEN = credentials('SONAR_TOKEN'))
-    
-}
-   stages {
-        stage("build"){
+    environment {
+        PATH = "/opt/apache-maven-3.9.6/bin:$PATH"
+        SONAR_TOKEN = credentials('SONAR_TOKEN')
+    }
+    stages {
+        stage("build") {
             steps {
-                 echo "----------- build started ----------"
+                echo "----------- build started ----------"
                 sh 'mvn package'
-                 echo "----------- build complted ----------"
+                echo "----------- build completed ----------"
             }
         }
-        stage("test"){
-            steps{
+        stage("test") {
+            steps {
                 echo "----------- unit test started ----------"
                 sh 'mvn surefire-report:report'
-                 echo "----------- unit test Complted ----------"
+                echo "----------- unit test completed ----------"
             }
         }
-         stage('SonarQube Analysis') {
+        stage('SonarQube Analysis') {
             steps {
                 script {
-                    // Run SonarQube analysis
                     sh """
                     mvn sonar:sonar \
-                    -Dsonar.projectKey=myproject-taxiwala_taxiwala\
-                    -Dsonar.organization=myproject-taxiwala\
-                    -Dsonar.host.url=https://sonarcloud.io \
-                    -Dsonar.token=${SONAR_TOKEN}
+                      -Dsonar.projectKey=myproject-taxiwala_taxiwala \
+                      -Dsonar.organization=myproject-taxiwala \
+                      -Dsonar.host.url=https://sonarcloud.io \
+                      -Dsonar.token=${SONAR_TOKEN}
                     """
                 }
             }
         }
+        stage("Jar Publish") {
+            steps {
+                script {
+                    echo '<--------------- Jar Publish Started --------------->'
+                    def server = Artifactory.newServer url: registry, credentialsId: "jfrog-cred"
 
-}
-}
+                    def properties = "buildid=${env.BUILD_ID},commitid=${GIT_COMMIT}"
+                    def uploadSpec = """{
+                        "files": [
+                            {
+                                "pattern": "target/*.jar",
+                                "target": "taxi-libs-release-local/",
+                                "flat": "false",
+                                "props" : "${properties}",
+                                "exclusions": [ "*.sha1", "*.md5" ]
+                            }
+                        ]
+                    }"""
 
+                    def buildInfo = server.upload(uploadSpec)
+                    buildInfo.env.collect()
+                    server.publishBuildInfo(buildInfo)
+                    echo '<--------------- Jar Publish Ended --------------->'
+                }
+            }
+        }
+    }
+}
