--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,38 +41,27 @@ environment {
             }
         }
      stage("Jar Publish") {
-            steps {
-                script {
-                     echo '<--------------- Jar Publish Started --------------->'
-
-                     def registry = 'https://taxi012.jfrog.io/artifactory'
-                     def server = Artifactory.newServer url: registry, credentialsId: "jfrog-cred"
-
-            // define props outside JSON
-                     def properties = "buildid=${env.BUILD_ID};commitid=${GIT_COMMIT}"
-
+        steps {
+            script {
+                    echo '<--------------- Jar Publish Started --------------->'
+                     def server = Artifactory.newServer url:registry+"/artifactory" ,  credentialsId:"jfrog-cred"
+                     def properties = "buildid=${env.BUILD_ID},commitid=${GIT_COMMIT}";
                      def uploadSpec = """{
-                        "files": [
-                         {
-                            "pattern": "target/*.jar",
-                             "target": "shanvik-libs-release-local/",
-                             "flat": "false",
-                             "props": "${properties}",
-                              "exclusions": [ "*.sha1", "*.md5" ]
-                      }
-                ]
-            }"""
-
-            echo "Upload spec being used: ${uploadSpec}"
-
-            def buildInfo = server.upload(uploadSpec)
-            buildInfo.env.collect()
-            server.publishBuildInfo(buildInfo)
-
-            echo '<--------------- Jar Publish Ended --------------->'
-        }
+                          "files": [
+                            {
+                              "pattern": "/home/ubuntu/jenkins/workspace/taxi-booking/taxi-booking/target/(*)",
+                              "target": "shanvik-libs-release-local/{1}",
+                              "flat": "false",
+                              "props" : "${properties}",
+                              "exclusions": [ "*.sha1", "*.md5"]
+                            }
+                         ]
+                     }"""
+                     def buildInfo = server.upload(uploadSpec)
+                     buildInfo.env.collect()
+                     server.publishBuildInfo(buildInfo)
+                     echo '<--------------- Jar Publish Ended --------------->'  
+             }
+        }   
     }
-}
-
-}
-}
+   }
