--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,5 @@
 def registry = 'https://taxi012.jfrog.io/artifactory'
-def server = Artifactory.newServer url: registry, credentialsId: "jfrog-cred"
+#def server = Artifactory.newServer url: registry, credentialsId: "jfrog-cred"
 pipeline {
     agent {
         node {
